force-app/main/default/objects/Debit_Item__c/Debit_Item__c.object-meta.xml
<CustomObject>
    <label>Debit Item</label>
    <nameField>
        <label>Debit Item ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debit Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>