force-app/main/default/objects/Debit_Item__c/fields/Billings__c.field-meta.xml
<CustomField>
    <fullName>Billings__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billings</label>
    <referenceTo>ConsolBill__c</referenceTo>
    <relationshipLabel>Debit Items</relationshipLabel>
    <relationshipName>Debit_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>