force-app/main/default/objects/Debit_Item__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>text(Billings__r.CurrencySelling__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>