force-app/main/default/objects/Debit_Item__c/fields/Debit__c.field-meta.xml
<CustomField>
    <fullName>Debit__c</fullName>
    <label>Debit</label>
    <referenceTo>Debit__c</referenceTo>
    <relationshipLabel>Debit Items</relationshipLabel>
    <relationshipName>Debit_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>