force-app/main/default/objects/Debit_Item__c/fields/Pricing_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Name__c</fullName>
    <formula>Billings__r.PricingName__r.ServiceNameEng__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Name</label>
    <type>Text</type>
</CustomField>